--- a/RM/angular.json
+++ b/RM/angular.json
@@ -97,6 +97,11 @@
       }
     }
   },
+  "schematics": {
+    "@schematics/angular:component": {
+      "style": "scss"
+    }
+  },
   "cli": {
     "analytics": false
   }
