--- a/RM/package.json
+++ b/RM/package.json
@@ -25,6 +25,7 @@
     "appwrite": "^14.0.1",
     "chart.js": "^4.4.7",
     "express": "^4.18.2",
+    "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.3",
     "rxjs": "~7.8.0",
